--- a/index.html
+++ b/index.html
@@ -5,22 +5,56 @@
   <title>Резюме — Беликов Никита</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px auto; max-width: 900px; line-height: 1.6; color: #222; }
-    h1, h2 { border-bottom: 2px solid #ddd; padding-bottom: 5px; }
-    .section { margin-bottom: 35px; }
+    body { 
+      font-family: "Segoe UI", Arial, sans-serif; 
+      margin: 40px auto; 
+      max-width: 900px; 
+      line-height: 1.6; 
+      color: #222; 
+      background-color: #fafafa;
+    }
+    h1 { 
+      font-size: 28px; 
+      margin-bottom: 5px;
+      color: #111;
+    }
+    h2 { 
+      border-bottom: 2px solid #ddd; 
+      padding-bottom: 5px; 
+      margin-top: 35px;
+      font-size: 20px;
+      color: #333;
+    }
+    .section { margin-bottom: 25px; }
     ul { list-style: none; padding-left: 0; }
     li { margin-bottom: 6px; }
-    strong { color: #333; }
-    .contact { font-size: 14px; margin-top: -10px; margin-bottom: 20px; }
+    strong { color: #000; }
+    em { color: #555; }
+    .contact { 
+      font-size: 14px; 
+      margin-top: -10px; 
+      margin-bottom: 20px; 
+      color: #444;
+    }
+    .contact a { 
+      color: #0056b3; 
+      text-decoration: none; 
+    }
+    .contact a:hover { 
+      text-decoration: underline; 
+    }
     .project, .job { margin-bottom: 20px; }
-    .project ul, .job ul { margin-top: 8px; margin-bottom: 0; }
+    .project ul, .job ul { margin-top: 8px; margin-bottom: 0; padding-left: 18px; list-style: disc; }
+    .job p, .project p { margin-bottom: 4px; }
+    .project strong { color: #222; }
   </style>
 </head>
 <body>
   <h1>Беликов Никита</h1>
   <p class="contact">
     📞 +7-908-926-00-75 | ✉️ <a href="mailto:nneketaa@yandex.ru">nneketaa@yandex.ru</a> | 
-    <a href="https://github.com/holo2k" target="_blank">github.com/holo2k</a>
+    <a href="https://github.com/holo2k" target="_blank">github.com/holo2k</a> | 
+    <a href="https://t.me/holo21k" target="_blank">t.me/holo21k</a>
   </p>
 
   <div class="section">
