--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
     <p><strong>DeputyApp</strong> | C#, ASP.NET Core 9, Avalonia, MinIO, PostgreSQL, EF Core, Docker <em>(2025)</em></p>
     <ul>
       <li>Победитель хакатона «РадиоХак 2.0 — 2025», Екатеринбург.</li>
-      <li>Спроектировал архитектуру микросервисного приложения на .NET 9 с разделением на слои: Presentation, Application, Infrastructure, Domain.</li>
+      <li>Спроектировал архитектуру приложения на .NET 9 с разделением на слои.</li>
       <li>Реализовал backend для системы управления документами и публикациями депутатов.</li>
-      <li>Настроил аутентификацию через JWT и Keycloak; настроил CORS и документацию Swagger/OpenAPI.</li>
       <li>Разработал хранение файлов в MinIO и выдачу presigned URL для фронтенда.</li>
+      <li>Настроил аутентификацию</li>
       <li>Интегрировал Telegram Bot API для уведомлений и настроил логирование через Serilog.</li>
       <li>Собрал docker-compose окружение с PostgreSQL, MinIO и API; обеспечил автоматическую миграцию базы данных при старте.</li>
-      <li>Написал и отладил unit-тесты для AuthService, PostService, EventService и DocumentService.</li>
+      <li>Написал и отладил unit-тесты.</li>
       <li>Координировал backend-разработку в команде и участвовал в финальной презентации проекта.</li>
-      <li>Ведутся переговоры с Думой Екатеринбурга по пилотному внедрению.</li>
+      <li>В данный момент ведутся переговоры с Думой Екатеринбурга по пилотному внедрению.</li>
     </ul>
   </div>
     <div class="project">
@@ -171,7 +171,7 @@
     <li><strong>Хранилища и интеграции:</strong> MinIO (S3), Redis, RabbitMQ, Hangfire, gRPC, REST API, Telegram Bot API</li>
     <li><strong>Инфраструктура:</strong> Docker, Docker Compose, CI/CD (GitHub Actions), Testcontainers, Serilog, Swagger/OpenAPI</li>
     <li><strong>Инструменты:</strong> Visual Studio, VS Code, Git, Postman, DBeaver, Linux, PowerShell</li>
-    <li><strong>Архитектура</strong> DDD, Clean Architecture, Onion</li>
+    <li><strong>Архитектура:</strong> DDD, Clean Architecture, Onion</li>
   </ul>
 </section>
 </body>
